styles.css
body {
 	margin: 0;
 	background-color: #EDF2F6;
 	font-family: 'Source Sans Pro', sans-serif;
 	font-weight: 800;
 }

  nav {
 	background-color: #374050;
 	width: 15%;
 	position: absolute;
 	color: #A2ACBD;
 	height: 1700px;
 }

  .article__image {
 	border-radius: 50%;
 	margin-left: 33%;
 	margin-top: 13%;
 	width: 33%;
 	height: 80px;
 }

 .nav__article-user {
	border-bottom: 2px solid #2B3240;
}

.article__h1 {
 	font-size: 18px;
 	margin-left: 28%;
 	font-weight: 400;
 	margin-bottom: 28px;
 	margin-top: 11px;
 }

  .nav__section {
 	padding-top: 18px;
 	border-bottom: 2px solid #2B3240;
 	padding-bottom: 15px;
 }

h2 {
	display: inline-block;
}

 .section__header {
 	font-size: 15px;
 	margin-bottom: 25px;
 	color: #67748B;
 	margin-left: 10%;
 }

a {
	text-decoration: none;
}

 .nav__links {
 	display: block;
 	color: #A2ACBD;
 	font-size: 15px;
 	margin-bottom: 18px;
 	width: 100%;
 	font-weight: 800;
 }

  .nav__links:hover {
 	color: white;
 	border-left: 7px solid #4799D7;
 }

.nav__icons {
	height: 17px;
	width: 17px;
	margin-right: 8%;
	margin-left: 10%;
}

  .last-list {
 	border-bottom: 0;
 }

.colors {
	height: 30px;
	width: 25px;
	border-radius: 20px;
}

.main {
 	width: 84%;
 	position: relative;
 	margin-left: 15%;
 }

.header-btn {
	height: 70px;
	width: 5%;
	border: 0;
	border-right: 2px solid #EFF2F5;
}

.header-btn:hover {
	opacity: 0.5;
}

.header-icons {
 	height: 30px;
 	width: 30px;
 }

 .section__input {
 	width: 71.5%;
 	height: 50px;
 	padding-left: 3.5%;
 	margin:0;
 	border: 0;
 	border-top: 0;
 }

 .section__input::placeholder {
 	font-size: 16px;
 	color: #A2ACBD;
 }

.border {
 	border-left: 2px solid #EFF2F5;
 }

.calendar {
	border-right: 0;
}

.box-1 {
	padding-left: 3.5%;
	background-color: #fff;
	padding-bottom: 15px;
	border-top: 2px solid #EFF2F5;
	width: 100%;
}

.top-header {
	font-size: 35px;
	color: #4E515D;
	margin-bottom: 0;
	width: 102%;
 	height: 70px;
 	background-color: #fff;
 	font-weight: 100;
 }

 .service {
 	display: inline-block;
 	margin-top: 60px;
 	height: 30px;
 	width: 50%;
 }

.top-btn {
	background-color: white;
	border-radius: 20px;
	height: 40px;
	width: 40px;
	border: 2px solid #D3DAE1;
	margin-left: 1%;
}

.top-btn:hover {
	opacity: 0.7;
}

.open-btn {
	background-color: white;
	font-size: 15px;
	border-radius: 20px;
	padding: 9px;
	font-weight: 600;
	width: 100px;
	height: 40px;
	margin-left: 23%;
}

.top-icons {
	height: 15px;
	width: 15px;
}

.green-dot {
	margin-right: 10%;
}

.location-article {
	height: 30px;
	width: 50%;
	display: inline-block;
	font-size: 18px;
}

.location-img {
	height: 20px;
	width: 20px;
	margin-right: 1%;
}

.location {
	color: #8C95A3;
	margin-top: 10px;	
}

.preview {
	color: #6AA3F3;
	margin-left: 1%;
}

.preview:hover {
	opacity: 0.7;
}

.tab-links {
	margin-top: 55px;
}

 .tabs {
	margin-right: 5.2%;
	color: #8C95AC;
	font-weight: 800;
	font-size: 18px;
	padding-bottom: 15px;
	margin-bottom: 10px;
	margin-top: 100px;
}

.tabs:hover {
	color: black;
	border-bottom: 2px solid #47A3F3;
}

.graphs {
	width: 100%;
	height: 430px;
	border-top: 2px solid #D9DFE5;
}

.donut-chart {
	height: 60%;
	width: 17%;
	display: inline-block;
	margin-top: 35px;
	margin-left: 2%;
	position: relative;
}

 .donut {
 	display: inline-block;
 }

.first-donut {
	margin-left: 5%;
}

.chart-text {
	color: #8C95A3;
	transform: translateY(0.25em);
}

.chart-number {
	color: #4E515D;
	font-size: 10px;
	line-height: 3;
	text-anchor: middle;
	transform: translateY(-0.25em);
}

.chart-label {
	font-size: 3px;
	text-anchor: middle;
	transform: translateY(0.7em);
}

.bar-graph {
	display: flex;
	float: right;
	height: 60%;
	margin-right: 1%;
	margin-top: 2%;
	width: 37%;
}

.totals {
	background-color: white;
	border-radius: 20px;
	border: 2px solid #D5DCE3;
	display: inline-block;
	font-size: 100%;
	margin-left: 22%;
	margin-right: 30%;
	margin-top: 30px;
	padding-left: 2%;
	padding: 7px;
	width: 200px;
}

.per-day {
	background-color: white;
	border-radius: 20px;
	border: 2px solid #D5DCE3;
	display: inline-block;	
	font-size: 100%;
	padding-left: 3.5%;
	padding: 0.5%;
	width: 175px;
}

 hr {
 	background-color: #EFF2F5;
 }

.pt-1 {
	display: inline-block;
	margin-left: 3.8%;
	width: 45.4%;
}

.pt-3-img {
	height: 40px;
	width: 40px;
}

.pt-3-img:hover {
	opacity: 0.5;
}

.pt-2 {
	display: inline-block;
	width: 45.4%;
}

.info-box {
	margin-left: 3.5%;
	position: absolute;
	width: 69%;
}

.bottom__header {
	background-color: #717E93;
	border-radius: 5px;
	color: #fff;
	font-size: 18px;
	height: 65px;
	margin-top: 40px;
	margin: 0;
	padding-top: 20px;
	width: 100%;
}

.bottom-text {
 	margin-left: 4%;
 	margin-right: 2.5%;
}

p {
	display: inline-block;
}

.bottom__button {
 	background-color: #808B9E;
 	border:none;
 	color: #fff;
 	font-size: 15px;
 	font-weight: 600;
 	height: 40px;
}

.bottom__button:hover {
 	opacity: 0.7;
}

.pencil-img {
 	height: 20px;
 	margin-right: 10px;
 	width: 20px;
	}

li {
	list-style-type: none;
	padding-bottom: 9px;
	padding-top: 9px;
}

ul {
	background-color: #fff;
	border-radius: 5px;
	margin:0;
	padding-right: 40px;
}

.li__h2 {
	color: #717E93;
	font-size: 18px;
	font-weight: 800;
	width: 24%;
}

.li__p {
	color: #4E515D
	display: inline-block;
	font-size: 200px;
	font-weight: 300;
}

.user__image2 {
	border: 2px solid #EFF2F5;
 	border-radius: 50%;
 	display: inline-block;
 	height: 40px;
 	width: 40px;
}

.salary {
	color: black;
}

.social {
	margin-left: 76%;
	margin-right: 2%;
	margin-top: 40px;
	position: relative;
}

.social-media {
	border-radius: 5px;
	font-size: 16px;
	height: 65px;
	padding-right: 18%;
	width: 100%;
}

.social-media:hover {
	opacity: 0.7;
}

.facebook {
	background-color: #4053AF;
	color: white;
	margin-bottom: 15px;
}

.social-img {
	height: 30px;
	margin-right: 12%;
	width: 30px;
}

.twitter {
	background-color: #47A9E9;
	color: white;
	margin-bottom: 15px;
}

.linkedin {
	background-color: #3581B9;
	color: white;
	margin-bottom: 40px;
}

.bottom-links {
	color: black;
	font-size: 20px;
	font-weight: 800;
}

.bottom-icons {
	height: 20px;
	margin-right: 5%;
	width: 20px;
}

.bottom-input {
	border-radius: 5px;
	color: #707A89;
	height: 40px;
	margin-bottom: 25px;
	margin-right: 0;
	width: 76%;
}

.bottom-input::placeholder {
	color: #707A89;
	font-size: 15px;
}

.bottom-buttons {
	background-color: #66B8BF;
	border-radius: 5px;
	color: white;
	font-size: 14px;
	height: 42px;
	margin: 0;
	width: 20%;
}

.bottom-buttons:hover {
	opacity: 0.7;
}

.bottom-input-third {
	width: 100%;
}

 .bottom-p {
 	color: #4E515D;
 	font-size: 18px;
 	font-weight: 300;
 }

@media only screen and (max-width: 1250px) {
	.tabs {
		font-size: 15px;
		margin-right: 3%;
	}

	.top-header {
		font-size: 25px;
	}

	.open-btn {
		margin-left: 15%;
	}

	.preview {
		width: 300px;
	}

	.totals {
		margin-right: 20%;
	}

	.pt-1 {
		width: 45%;
	}

	.pt-2 {
		width: 45%;
	}

	.article__image {
		margin-left: 25%;
		width: 50%;
	}

	.article__h1 {
		font-size: 15px;
		margin-left: 20%;
	}

	.bottom-input {
		width: 50%;
	}

	.bottom-buttons {
		width: 30%;
	}

	.nav__links {
		font-size: 12px;
	}

	.bottom-input-third {
		width: 100%;
	}

	.social-media {
		font-size: 12px;
		padding-right: 10%;
	}

	.header-btn {
		width: 8%;
	}

	.section__input {
		width: 61%;
	}
}
@media only screen and (max-width: 980px) {
	nav, .border, .middle, .calendar {
		display: none;
	}

	.main {
		margin-left: 0;
		width: 100%;
	}

	.box-1 {
		padding-left: 0;
	}

	.social {
		float: left;
		margin-left: 10px;
		margin-top: 950px;
		width: 100%;
	}

	.social-img {
		margin-right: 10px;
	}

	.box-1 {
		padding-left: 2%;
		padding-right: 2%;
	}

	.open-btn {
		font-size: 10px;
		margin-left: 0px;
	}

	.service {
		font-size: 25px;
	}

	.location {
		font-size: 12px;
	}

	.preview {
		font-size: 12px;
	}

	.tabs {
		font-size: 10px;
	}

	.donut-chart {
		height: 100px;
		width: 28%;
	}

	.totals {
		display: none;
	}

	.per-day {
		display: none;
	}

	.pt-1, .pt-2, .pt-3-img {
		display: none; 
	}

	.bar-graph {
		height: 200px;
		margin-right: 20%;
		width: 60%;
	}

	.bottom__header {
		width: 93vw;
	}

	ul {
		width: 83.5vw;
	}

	.social-media {
		margin-left: 3%;
		width: 93vw;
	}

	.bottom-p, .bottom-links, .bottom-input {
		margin-left: 8%;
	}

	.bottom-input-third {
		width: 79.5vw;
	}

	.donut {
		height: 200px;
		width: 200px;
	}

	.facebook {
		margin-top: 50px;
	}
}
@media only screen and (max-width: 800px) {
	.totals {
		font-size: 10px;
		margin-right: 5%;
		width: 15%;
	}

	.per-day {
		font-size: 10px;
		width: 15%;
	}

	.bar-graph {
		display: block;
	}

	.bottom__header {
		width: 96vw;
	}
}
@media only screen and (max-width: 575px) {
	.donut {
		height: 120px;
		width: 120px;
	}

	.facebook {
		margin-top: 575px;
	}

	.li__h2 {
		margin-right: 100%;
	}

	.box-1 {
		padding-left: 3%;
	}

	.top-header {
		width: 105vw;
	}

	.box-1 {
		width: 100vw;
	}

	.graphs {
		margin-right: 5vw;
		width: 100vw;
	}

	.donut-chart {
		margin-right: 1%;
	}

	.bar-graph {
		margin-right: 0px;
		width: 100vw;
	}

	.service {
		font-size: 25px;
		margin-bottom: 25px;
		margin-top: 40px;
		width: 100%;
	}

	.top-btn {
		height: 40px;
		width: 40px;
		color: transparent;
	}

	.header-btn {
		width: 70px;
	}

	ul {
		width: 74.5vw;
	}

	.bottom__header {
		width: 94vw;
	}

	.preview {
		font-size: 10px;
	}

	.tabs {
		font-size: 8px;
	}

	.first-donut {
		margin-left: 0;
	}
}

